# KibiGame

./: CMakeLists.txt  README.md
KibiGameCore/: CMakeLists.txt
KibiGameCore/src/KibiGameCore/: test.cpp
KibiGameEditor/: CMakeLists.txt
KibiGameEditor/src/: main.cpp
